tiny vertical spacing fix for TextViews

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -203,6 +203,7 @@ body {
 .TextView {
 	overflow-wrap: break-word;
 	overflow: hidden;
+	line-height: 1.2;
 }
 
 
